--- a/index.html
+++ b/index.html
@@ -416,15 +416,15 @@
 
     <!-- Settings Modal -->
     <div id="settingsModal" class="modal" style="display: none;">
-        <div class="modal-content" style="max-width: 600px;">
-            <div class="modal-header">
-                <h2>⚙️ Configurações</h2>
-                <button class="modal-close" onclick="document.getElementById('settingsModal').style.display='none'">&times;</button>
+        <div class="modal-content" style="max-width: 600px; background: #1a1a1a; border: 1px solid #333;">
+            <div class="modal-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                <h2 style="color: white;">⚙️ Configurações</h2>
+                <button class="modal-close" onclick="document.getElementById('settingsModal').style.display='none'" style="color: white;">&times;</button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="background: #1a1a1a;">
                 <!-- Configuração de API Key -->
                 <div style="margin-bottom: 1.5rem;">
-                    <h3 style="color: var(--accent-primary); margin: 0 0 1rem 0; font-size: 1.1rem;">
+                    <h3 style="color: #667eea; margin: 0 0 1rem 0; font-size: 1.1rem;">
                         🔑 API Key do Google Gemini
                     </h3>
 
@@ -433,62 +433,62 @@
                             type="password"
                             id="newApiKeyInput"
                             placeholder="Cole sua API Key aqui..."
-                            style="width: 100%; padding: 0.75rem; border: 2px solid var(--border-color); border-radius: var(--radius-sm); font-family: 'Courier New', monospace; font-size: 0.95rem;"
+                            style="width: 100%; padding: 0.75rem; border: 2px solid #333; border-radius: 6px; font-family: 'Courier New', monospace; font-size: 0.95rem; background: #252525; color: #fff;"
                         >
                     </div>
 
                     <div style="display: flex; gap: 0.75rem; margin-bottom: 1rem;">
-                        <button id="saveApiKeyButton" class="btn-primary" style="flex: 1;">
+                        <button id="saveApiKeyButton" class="btn-primary" style="flex: 1; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none; color: white; padding: 0.75rem; border-radius: 6px; cursor: pointer;">
                             💾 Salvar
                         </button>
-                        <button id="testApiKeyButton" class="btn-secondary" style="flex: 1;">
+                        <button id="testApiKeyButton" class="btn-secondary" style="flex: 1; background: #252525; border: 2px solid #333; color: #fff; padding: 0.75rem; border-radius: 6px; cursor: pointer;">
                             🧪 Testar
                         </button>
                     </div>
 
-                    <details style="margin-top: 1rem; padding: 1rem; background: linear-gradient(135deg, #667eea11 0%, #764ba211 100%); border-left: 3px solid var(--accent-primary); border-radius: var(--radius-sm); cursor: pointer;">
-                        <summary style="list-style: none; font-weight: 600; color: var(--accent-primary); font-size: 0.95rem; display: flex; align-items: center; gap: 0.5rem; user-select: none;">
+                    <details style="margin-top: 1rem; padding: 1rem; background: linear-gradient(135deg, #667eea22 0%, #764ba222 100%); border-left: 3px solid #667eea; border-radius: 6px; cursor: pointer;">
+                        <summary style="list-style: none; font-weight: 600; color: #667eea; font-size: 0.95rem; display: flex; align-items: center; gap: 0.5rem; user-select: none;">
                             <span style="transition: transform 0.2s;">▶</span>
                             📚 Como obter sua API Key GRATUITA
                         </summary>
 
-                        <div style="background: #fff; padding: 1rem; border-radius: var(--radius-sm); margin: 1rem 0 1rem 0; border: 1px solid var(--border-color);">
-                            <ol style="margin: 0; padding-left: 1.5rem; font-size: 0.85rem; color: var(--text-primary); line-height: 2;">
+                        <div style="background: #252525; padding: 1rem; border-radius: 6px; margin: 1rem 0 1rem 0; border: 1px solid #333;">
+                            <ol style="margin: 0; padding-left: 1.5rem; font-size: 0.85rem; color: #a0a0a0; line-height: 2;">
                                 <li style="margin-bottom: 0.5rem;">
-                                    <strong>Acesse o <a href="https://makersuite.google.com/app/apikey" target="_blank" style="color: var(--accent-primary); text-decoration: underline;">Google AI Studio</a></strong>
+                                    <strong style="color: #fff;">Acesse o <a href="https://makersuite.google.com/app/apikey" target="_blank" style="color: #667eea; text-decoration: underline;">Google AI Studio</a></strong>
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    Faça login com sua <strong>conta Google</strong>
+                                    Faça login com sua <strong style="color: #fff;">conta Google</strong>
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    Aceite os termos <strong>"Como um desenvolvedor"</strong> e clique em <strong>"Continuar"</strong>
+                                    Aceite os termos <strong style="color: #fff;">"Como um desenvolvedor"</strong> e clique em <strong style="color: #fff;">"Continuar"</strong>
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    No canto superior direito, clique em <strong>"Criar chave de API"</strong> (botão verde)
+                                    No canto superior direito, clique em <strong style="color: #fff;">"Criar chave de API"</strong> (botão verde)
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    Dê um nome para sua chave (ex: <code style="background: var(--bg-hover); padding: 0.2rem 0.4rem; border-radius: 3px; font-family: 'Courier New', monospace;">"tradutor"</code>)
+                                    Dê um nome para sua chave (ex: <code style="background: #333; padding: 0.2rem 0.4rem; border-radius: 3px; font-family: 'Courier New', monospace; color: #667eea;">"tradutor"</code>)
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    Escolha <strong>"Default Gemini Project"</strong>
+                                    Escolha <strong style="color: #fff;">"Default Gemini Project"</strong>
                                 </li>
                                 <li style="margin-bottom: 0.5rem;">
-                                    Clique no <strong>ícone de copiar</strong> ao lado da chave gerada
+                                    Clique no <strong style="color: #fff;">ícone de copiar</strong> ao lado da chave gerada
                                 </li>
                                 <li>
-                                    <strong>Cole a chave</strong> no campo acima e clique em "Salvar"
+                                    <strong style="color: #fff;">Cole a chave</strong> no campo acima e clique em "Salvar"
                                 </li>
                             </ol>
                         </div>
 
-                        <div style="background: #d4edda; border: 1px solid #c3e6cb; padding: 0.75rem 1rem; border-radius: var(--radius-sm); margin-bottom: 0.75rem;">
-                            <p style="margin: 0; color: #155724; font-size: 0.85rem; font-weight: 500;">
+                        <div style="background: #10b98122; border: 1px solid #10b981; padding: 0.75rem 1rem; border-radius: 6px; margin-bottom: 0.75rem;">
+                            <p style="margin: 0; color: #10b981; font-size: 0.85rem; font-weight: 500;">
                                 ✅ <strong>100% GRATUITO!</strong> Sem necessidade de cartão de crédito.
                             </p>
                         </div>
 
-                        <div style="background: #fff3cd; border: 1px solid #ffeeba; padding: 0.75rem 1rem; border-radius: var(--radius-sm);">
-                            <p style="margin: 0; color: #856404; font-size: 0.8rem;">
+                        <div style="background: #f59e0b22; border: 1px solid #f59e0b; padding: 0.75rem 1rem; border-radius: 6px;">
+                            <p style="margin: 0; color: #f59e0b; font-size: 0.8rem;">
                                 <strong>💡 Dica:</strong> Essa chave permite traduzir arquivos inteiros de uma só vez usando o poder da IA Google Gemini!
                             </p>
                         </div>
